--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/lijy91/alfred-coding-workflow",
   "dependencies": {
-    "alfred-item": "^1.0.1"
+    "alfred-item": "^1.0.1",
+    "minimatch": "^3.0.0",
+    "minimist": "^1.2.0",
+    "request": "^2.67.0"
   }
 }
