--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/lijy91/alfred-coding-workflow",
   "dependencies": {
-    "alfred-item": "^1.0.1",
+    "alfred-workflow-nodejs": "^1.1.0",
+    "lowdb": "^0.10.3",
     "minimatch": "^3.0.0",
     "minimist": "^1.2.0",
     "request": "^2.67.0"
