--- a/info.plist
+++ b/info.plist
@@ -23,7 +23,7 @@
 	<key>createdby</key>
 	<string>LiJianying</string>
 	<key>description</key>
-	<string></string>
+	<string>基于 Alfred2 Workflows 的 Coding 个人项目快速搜索插件</string>
 	<key>disabled</key>
 	<false/>
 	<key>name</key>
@@ -33,29 +33,12 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>plusspaces</key>
-				<false/>
-				<key>url</key>
-				<string>{query}</string>
-				<key>utf8</key>
-				<true/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.openurl</string>
-			<key>uid</key>
-			<string>5D7DEBF4-1D77-4A67-9A6C-2AC44245BDAC</string>
-			<key>version</key>
-			<integer>0</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
 				<key>action</key>
 				<integer>1</integer>
 				<key>argument</key>
 				<integer>1</integer>
 				<key>argumenttext</key>
-				<string>cd</string>
+				<string>c</string>
 				<key>hotkey</key>
 				<integer>0</integer>
 				<key>hotmod</key>
@@ -108,6 +91,23 @@
 			<string>alfred.workflow.input.scriptfilter</string>
 			<key>uid</key>
 			<string>EAA3E124-DE75-4C9A-A97D-BD33C0B0E301</string>
+			<key>version</key>
+			<integer>0</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>plusspaces</key>
+				<false/>
+				<key>url</key>
+				<string>{query}</string>
+				<key>utf8</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.openurl</string>
+			<key>uid</key>
+			<string>5D7DEBF4-1D77-4A67-9A6C-2AC44245BDAC</string>
 			<key>version</key>
 			<integer>0</integer>
 		</dict>
