--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "build": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm db.json & rm npm-debug.log & rm -rf img"
+    "clean": "rm db.json & rm npm-debug.log & rm -rf .tmp"
   },
   "repository": {
     "type": "git",
